# scikit-maad

./: .gitignore  CITATION.bib  CITATION.gff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  _sound_func.py  maad_batch.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  python-compatibility.yml  python-package.yml
data/: jura_cold_forest_jour_label.txt  jura_cold_forest_label.txt~  label.txt  results_indices.csv  spinetail.txt
data/indices/: indices.csv
docs/: .buildinfo  Example.html  Makefile  audio_dataset.rst  conf.py  features.html  genindex.html  helpme.txt  howto.ipynb  index.html  index.rst  install.html  install.rst  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  rois.html  search.html  searchindex.js  sg_execution_times.rst  sound.html  sound.rst  spl.html  spl.rst  tutorial.html  util.html
docs/_auto_examples/: audio_shape_features.html  compare_auto_and_manual_rois_selection.html  extract_alpha_indices.html  find_rois.html  find_rois_comparison.html  index.html  index.rst  indices_calculation_indice.html  maad_batch.html  maad_details_auto.html  maad_details_man.html  maad_examples.html  maad_indice.html  maad_wrapper.html  nmf_and_false_color_spectrogram.html  plot_compare_auto_and_manual_rois_selection.html  plot_extract_alpha_indices.html  plot_nmf_and_false_color_spectrogram.html  plot_remove_background.html  plot_unsupervised_sound_classification.html  remove_background.html  sg_execution_times.html  using_shape_features.html
docs/_autosummary/: cluster.cluster_func.do_PCA.html  cluster.cluster_func.html  cluster.hdda.HDDC.html  cluster.hdda.html  cluster.html  ecoacoustics.alpha_indices.acousticComplexityIndex.html  ecoacoustics.alpha_indices.acousticDiversityIndex.html  ecoacoustics.alpha_indices.acousticEvenessIndex.html  ecoacoustics.alpha_indices.acousticRichnessIndex.html  ecoacoustics.alpha_indices.acoustic_activity.html  ecoacoustics.alpha_indices.acoustic_events.html  ecoacoustics.alpha_indices.bioacousticsIndex.html  ecoacoustics.alpha_indices.entropy.html  ecoacoustics.alpha_indices.envelope.html  ecoacoustics.alpha_indices.gini.html  ecoacoustics.alpha_indices.html  ecoacoustics.alpha_indices.intoBins.html  ecoacoustics.alpha_indices.kurtosis.html  ecoacoustics.alpha_indices.roughness.html  ecoacoustics.alpha_indices.score.html  ecoacoustics.alpha_indices.shannonEntropy.html  ecoacoustics.alpha_indices.skewness.html  ecoacoustics.alpha_indices.soundscapeIndex.html  ecoacoustics.alpha_indices.spectral_entropy.html  ecoacoustics.alpha_indices.surfaceRoughness.html  ecoacoustics.alpha_indices.wave2frames.html  ecoacoustics.html  features.alpha_indices.acousticComplexityIndex.html  features.alpha_indices.acousticDiversityIndex.html  features.alpha_indices.acousticEvenessIndex.html  features.alpha_indices.acousticGradientIndex.html  features.alpha_indices.acousticRichnessIndex.html  features.alpha_indices.acoustic_activity.html  features.alpha_indices.acoustic_complexity_index.html  features.alpha_indices.acoustic_diversity_index.html  features.alpha_indices.acoustic_eveness_index.html  features.alpha_indices.acoustic_events.html  features.alpha_indices.acoustic_gradient_index.html  features.alpha_indices.acoustic_richness_index.html  features.alpha_indices.all_audio_alpha_indices.html  (+396 more)
docs/_modules/: index.html
docs/_sources/: index.rst.txt  install.rst.txt  quickstart.rst.txt  rois.rst.txt  tutorial.rst.txt
docs/sphinx/: Example.rst  audio_dataset.rst  conf.py  features.rst  index.rst  install.rst  quickstart.rst  sound.rst  tutorial.rst  util.rst
example_gallery/: README.rst  _paths.py  compare_auto_and_manual_rois_selection.py  find_rois_comparison.py  find_rois_simple.ipynb  maad_details_auto.py  maad_indice.py  nmf_and_false_color_spectrogram.py  plot_extract_alpha_indices.py  plot_nmf_and_false_color_spectrogram.py  plot_remove_background.py  plot_unsupervised_sound_classification.py  remove_background.py  using_shape_features.py
example_gallery/1_basic/: plot_audio_representation.py  plot_circadian_spectrogram.py  plot_detection_distance.py  plot_find_rois_simple.py  plot_template_matching_example.py
example_gallery/2_advanced/: README.rst  extract_alpha_indices_multicpu.py  plot_compare_auto_and_manual_rois_selection.py  plot_extract_alpha_indices.py  plot_extract_alpha_indices_multicpu.py  (+11 more)
examples/: find_rois_simple.ipynb  maad_batch.py  maad_details.py  maad_details_auto.py  maad_details_man.py  maad_file_parser.py  maad_wrapper.py  plot_gabor.py  test_holowies.py
maad/: __init__.py  version.py
tests/: _paths.py  test_acoustic_traits.py  test_alpha_indices.py  test_examples.py  test_shape_features.py  test_sound_segmentation_1d.py  test_spectro_func.py  test_spectrogram_local_max.py  test_spl_func.py  test_template_matching.py  test_transform.py  test_xeno_canto.py
(+890 files in other folders)
