[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scikit-maad"
authors = [{name = "scikit-maad developers", email = "scikit.maad@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
description = "Open-source and modular toolbox for quantitative soundscape analysis in Python"
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = ["ecoacoustics", "bioacoustics", "ecology", "sound pressure level", "signal processing"]
dependencies = [
    "numpy>=1.21.1",
    "scipy>=1.8", 
    "scikit-image>=0.19.3",
    "pandas>=1.5.0",
    "resampy>=0.4.0",
    "matplotlib>=3.6.2"
    ]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]
build = ["flit"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    'Intended Audience :: Developers',
    "License :: OSI Approved :: BSD License",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Topic :: Software Development :: Libraries',
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
    ]

[project.urls]
Home = "https://github.com/scikit-maad/scikit-maad"
Source = "https://github.com/scikit-maad/scikit-maad"
Documentation = "https://scikit-maad.github.io/"
Tracker = 'https://github.com/scikit-maad/scikit-maad/issues'

[tool.flit.module]
name = "maad"

[tool.flit.sdist]
exclude = [
    "./docs",
    "./data",
    "./example_gallery",
    "./tests",
    "requirements.txt"
    ]
